--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "http-proxy-middleware": "^3.0.0",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-animatable": "^1.4.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
     "react-native-vector-icons": "^10.1.0"
